--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
-  <h5><a href="D:\WEB DEV\HTML- Personal Site\hobbies.html">My Hobbies</a></h5>
+  <h5><a href="hobbies.html">My Hobbies</a></h5>
   <hr>
-  <h5><a href="D:\WEB DEV\HTML- Personal Site\contact.html">Contact Me</a></h5>
+  <h5><a href="contact.html">Contact Me</a></h5>
 </body>
 
 </html>
