--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </table>
   <h5><a href="hobbies.html">My Hobbies</a></h5>
   <hr>
-  <h5><a href="contact.html">Contact Me</a></h5>
+  <h5><a href="https://github.com/Sayam06/myFirstWebsite/blob/main/contact.html">Contact Me</a></h5>
 </body>
 
 </html>
