--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <tr>
       <td>Gaming</td>
       <td>⭐⭐⭐⭐⭐</td>
-      <td>Coding</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>Procrastinating</td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
   <h3>My Hobbies</h3>
